RealOpInsight ChangeLog
###############################
2.4.0beta1 (Federator)
  * Improved support for overriding SSL peer verification
  * Added support for multisources management, up to 10 sources supported
  * Lot of refactoring, imporving loading and updating
  * Added splash screen when loading configuration
  * Added support for dragging and scrolling from the map

2.3.1 (Briator, p1)
  * Added support for overriding SSL peer verification
  * Private release no sufficiently tested for production

2.3.0 (Briator)
  * Minor changes from the beta version.
  * Binaries are available for Fedora 17 and 18, openSUSE 12.1, 12.2 and 12.3.
  From this version, we don't longer provide binaries for Fedora 16

2.3.0beta1 (Briator, b1)
--------------
  * Added support for MK Livestatus remote socket
  * Added new menus for handling full screen, filtering trouble messages, and
    for changing font size from the operations console
  * Added support for copy/paste as well as more menu shortcuts within the editor
  * Added new icons
  * Added french translation
  * added validator for the Port field
  * Make the IDs of data points case insensitive
  * Minor bug fixes
  
2.2.1 (Lucia, p1)
-------------
  * Added support for Zabbix 1.8.x. Fixed ticket #11
  * Minor upates on metadata handling

2.2.0 (Lucia)
--------------
  * Fixed compilation problems on nullptr. See Ticket #8
  * Fixed metadata handling. See ticket #9

2.2.0beta1(Lucia, b1)
--------------
  * Added support for Zenoss. Has been tested with Zenoss 4.x but would work
    with Zenoss 3.x
  * Update severity model introducing a fine-grained manageability of incidents
    (UNKNOWN, CRITICAL, MAJOR, MINOR, NORMAL)
  * Added System Tray Icon for notification the main window is inactive
  * Support some Zabbix's meta tag (e.g. {HOST.NAME}) in alarm messages
  * Brings new and optimized data structures and algorithms for better
    performances and a reduced memory footprint